--- a/packages/dds/task-manager/package.json
+++ b/packages/dds/task-manager/package.json
@@ -138,6 +138,7 @@
 		"@fluidframework/eslint-config-fluid": "^5.7.4",
 		"@fluidframework/task-manager-previous": "npm:@fluidframework/task-manager@2.53.0",
 		"@fluidframework/test-runtime-utils": "workspace:~",
+		"@fluidframework/test-utils": "workspace:~",
 		"@microsoft/api-extractor": "7.52.8",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^18.19.0",
